# Battleship

./: .gitignore  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: App.hpp  Core.cpp  Core.hpp  GameApp.cpp  GameApp.hpp  GameGrid.cpp  GameGrid.hpp  GraphicManager.hpp  Ship.cpp  Ship.hpp  ShipPlacementMenu.cpp  ShipPlacementMenu.hpp  TextureManager.cpp  TextureManager.hpp
src/NTL/: Graphics.hpp
src/NTL/Graphics/: Drawable.hpp  PrimitiveType.hpp  RectangleShape.hpp  RenderStates.hpp  Shader.cpp  Shader.hpp  Shape.cpp  Shape.hpp  Sprite.hpp  Texture.cpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp
src/NTL/System/: Event.hpp  Window.cpp  Window.hpp
src/NTL/Utils/: Angle.hpp  Color.cpp  Color.hpp  Matrix.hpp  Rectangle.hpp  Rectangular.hpp  Vector2.hpp
